apps/nginx/overlays/stage/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: nginx
spec:
  rules:
    - host: nginx.skravops-cmd.space
  tls:
    - hosts:
        - nginx.skravops-cmd.space
